--- a/blogapp/templates/search.html
+++ b/blogapp/templates/search.html
@@ -233,7 +233,7 @@
                 </div>
                 {% endfor%}
                 {% else %}
-                <h4 class="text-muted">No result Founded</h4>
+                <h4 class="text-muted mt-4 text-center">No result Founded</h4>
                 {% endif %}
 
             </div>
