--- a/blogapp/templates/home.html
+++ b/blogapp/templates/home.html
@@ -302,7 +302,8 @@
                                                 <div>
                                                     <select name="related_language" class="form-control my-3 "
                                                         id="id_related_language">
-                                                        <option value="" selected="" class="text-muted">Related Language
+                                                        <option value="" selected="" class="text-muted">Related
+                                                            Language(optional)
                                                         </option>
 
                                                         <option value="Other">Other</option>
@@ -330,11 +331,10 @@
                                                         <option value="Swift">Swift</option>
 
                                                     </select>
-                                                    <input type="text" name="title" placeholder="Title"
-                                                        class="form-control my-3 " maxlength="120" required=""
-                                                        id="id_title">
+                                                    <input type="text" name="title" placeholder="Title(optional)"
+                                                        class="form-control my-3 " maxlength="120" id="id_title">
                                                     <textarea name="description" placeholder="Description"
-                                                        class="form-control " cols="40" rows="10"
+                                                        class="form-control " cols="40" rows="10" required=""
                                                         id="id_description"></textarea>
                                                 </div>
 
@@ -427,7 +427,9 @@
                     <div class="mt-3">
                         <!-- content -->
                         <div>
+                            {% if blog.title %}
                             <h5>{{blog.title}}</h5>
+                            {% endif %}
                             <p>
                                 {{blog.description}}
                             </p>
@@ -471,11 +473,11 @@
                                     <hr />
                                     <!-- comment & like bar -->
                                     <div class="d-flex justify-content-around">
-                                        <div class="like_container">
+                                        <div class="like_container{{blog.id}} like_container">
                                             <div class="like_btn d-flex
                                             justify-content-center
                                             align-items-center
-                                            like_btn{{blog.id}}" role="button">
+                                            like_btn" role="button">
                                                 {% if request.user in blog.liked_by.all %}
                                                 <i class="fas fa-thumbs-up me-3 text-primary"></i>
                                                 <p class="m-0 liked_text{{blog.id}}">Liked</p>
@@ -641,17 +643,26 @@
                         <h6>Posts</h6>
                     </div>
                     <div class="col-3 ">
+                        {% if request.user.user_profile.get_followers_count %}
                         <h4>{{request.user.user_profile.get_followers_count}}</h4>
+                        {% else %}
+                        <h4>0</h4>
+                        {% endif %}
                         <h6>Followers</h6>
                     </div>
                     <div class="col-3 ">
+                        {% if request.user.user_profile.get_following_count %}
                         <h4 class="following_count">{{request.user.user_profile.get_following_count}}</h4>
+                        {% else %}
+                        <h4>0</h4>
+                        {% endif %}
                         <h6>Following</h6>
                     </div>
                 </div>
                 <div class="p-3 mt-4 mb-5">
                     <!-- suggestions -->
                     <h5 class="text-muted">Suggestions</h5>
+                    {% if request.user.user_profile.get_suggestions %}
 
                     {% for user in request.user.user_profile.get_suggestions %}
                     <!-- s 1 -->
@@ -675,6 +686,11 @@
                         </a>
                     </li>
                     {% endfor %}
+                    {% else %}
+                    <p class="">Add <span><a href="{% url 'profile-add' %}" class="text-primary">profile</a></span> to
+                        get User Suggestions</p>
+                    {% endif %}
+
                 </div>
             </div>
         </div>
