--- a/blogapp/templates/my_profile.html
+++ b/blogapp/templates/my_profile.html
@@ -5,9 +5,16 @@
 <div class="row mt-5">
 
     <div class="col-lg-6 mx-auto">
-        <a href="{% url 'profile-add' %}" class="" style="position: absolute; right:10%; top:15%;">
+        {% if request.user.user_profile %}
+        <a href="{% url 'profile-edit' %}" class="" style="position: absolute; right:10%; top:15%;">
             <i class="fas fa-edit text-muted fs-1"></i>
         </a>
+        {% else %}
+        <a href="{% url 'profile-add' %}" class="" style="position: absolute; right:10%; top:15%;">
+            <i class="fas fa-plus text-muted fs-1"></i>
+        </a>
+        {% endif %}
+
         <!-- dp -->
         <div class="text-center p-3 mt-4 w-100">
             <div class="p-1">
@@ -53,7 +60,9 @@
 
             </div>
             <h4 class="my-3">{{request.user}}</h4>
-            <p>{{request.user.user_profile.bio}}</p>
+            {% if user.user_profile.bio %}
+            <p>{{user.user_profile.bio}}</p>
+            {% endif %}
         </div>
 
         <div class="row d-flex justify-content-around p-0 text-center">
@@ -63,7 +72,11 @@
             </div>
             <div class="col-3 followers_container">
                 <div data-bs-toggle="modal" data-bs-target="#followers" role="button">
-                    <h4 class="">{{request.user.user_profile.get_followers_count}}</h4>
+                    {% if request.user.user_profile.get_followers_count %}
+                    <h4>{{request.user.user_profile.get_followers_count}}</h4>
+                    {% else %}
+                    <h4>0</h4>
+                    {% endif %}
                     <h6>Followers</h6>
                 </div>
 
@@ -173,7 +186,11 @@
             </div>
             <div class="col-3 refresh-follwing">
                 <div data-bs-toggle="modal" data-bs-target="#following" role="button">
-                    <h4 class="">{{request.user.user_profile.get_following_count}}</h4>
+                    {% if request.user.user_profile.get_following_count %}
+                    <h4 class="following_count">{{request.user.user_profile.get_following_count}}</h4>
+                    {% else %}
+                    <h4>0</h4>
+                    {% endif %}
                     <h6>Following</h6>
                 </div>
 
@@ -280,7 +297,9 @@
                     <div class="mt-3">
                         <!-- content -->
                         <div>
+                            {% if blog.title %}
                             <h5>{{blog.title}}</h5>
+                            {% endif %}
                             <p>
                                 {{blog.description}}
                             </p>
@@ -324,11 +343,11 @@
                                     <hr />
                                     <!-- comment & like bar -->
                                     <div class="d-flex justify-content-around">
-                                        <div class="like_container">
+                                        <div class="like_container{{blog.id}} like_container">
                                             <div class="like_btn d-flex
                                             justify-content-center
                                             align-items-center
-                                            like_btn{{blog.id}}" role="button">
+                                            like_btn" role="button">
                                                 {% if request.user in blog.liked_by.all %}
                                                 <i class="fas fa-thumbs-up me-3 text-primary"></i>
                                                 <p class="m-0 liked_text{{blog.id}}">Liked</p>
