--- a/blogapp/templates/other-profile.html
+++ b/blogapp/templates/other-profile.html
@@ -56,7 +56,11 @@
             </div>
             <div class="col-3">
                 <div data-bs-toggle="modal" data-bs-target="#followers" role="button">
-                    <h4>{{user.user_profile.get_followers_count}}</h4>
+                    {% if request.user.user_profile.get_followers_count %}
+                    <h4>{{request.user.user_profile.get_followers_count}}</h4>
+                    {% else %}
+                    <h4>0</h4>
+                    {% endif %}
                     <h6>Followers</h6>
                 </div>
 
@@ -102,7 +106,11 @@
             </div>
             <div class="col-3">
                 <div data-bs-toggle="modal" data-bs-target="#following" role="button">
-                    <h4>{{user.user_profile.get_following_count}}</h4>
+                    {% if request.user.user_profile.get_following_count %}
+                    <h4 class="following_count">{{request.user.user_profile.get_following_count}}</h4>
+                    {% else %}
+                    <h4>0</h4>
+                    {% endif %}
                     <h6>Following</h6>
                 </div>
 
@@ -156,7 +164,7 @@
                 <!-- posts -->
                 <!-- p 1 -->
 
-                {% if ser.user_blog %}
+                {% if user.user_blog %}
                 {% for blog in user.user_blog.all %}
 
                 <div class="bg-white p-4 rounded shadow mt-3">
@@ -206,7 +214,9 @@
                     <div class="mt-3">
                         <!-- content -->
                         <div>
+                            {% if blog.title %}
                             <h5>{{blog.title}}</h5>
+                            {% endif %}
                             <p>
                                 {{blog.description}}
                             </p>
@@ -250,11 +260,11 @@
                                     <hr />
                                     <!-- comment & like bar -->
                                     <div class="d-flex justify-content-around">
-                                        <div class="like_container">
+                                        <div class="like_container{{blog.id}} like_container">
                                             <div class="like_btn d-flex
                                             justify-content-center
                                             align-items-center
-                                            like_btn{{blog.id}}" role="button">
+                                            like_btn" role="button">
                                                 {% if request.user in blog.liked_by.all %}
                                                 <i class="fas fa-thumbs-up me-3 text-primary"></i>
                                                 <p class="m-0 liked_text{{blog.id}}">Liked</p>
