--- a/blogapp/templates/signin.html
+++ b/blogapp/templates/signin.html
@@ -24,7 +24,7 @@
         <!-- heading -->
         <div class="text-center text-lg-start mt-0 pt-0 mt-lg-5 pt-lg-5">
             <h1 class="text-primary fw-bold fs-0">Devflow</h1>
-            <p class="w-75 mx-auto fs-4 mx-lg-0">Devflow helps you connect and share with the developers in your world.
+            <p class="w-75 mx-auto fs-4 mx-lg-0">Be the Flow.
             </p>
         </div>
         <!-- form card -->
