--- a/blogapp/templates/signup.html
+++ b/blogapp/templates/signup.html
@@ -23,7 +23,7 @@
         <!-- heading -->
         <div class="text-center text-lg-start mt-0 pt-0 mt-lg-5 pt-lg-5">
             <h1 class="text-primary fw-bold fs-0">Devflow</h1>
-            <p class="w-75 mx-auto fs-4 mx-lg-0">Devflow helps you connect and share with the developers in world.</p>
+            <p class="w-75 mx-auto fs-4 mx-lg-0">Be the Flow.</p>
         </div>
         <!-- form card -->
         <div style="max-width: 28rem; width: 100%">
@@ -44,7 +44,7 @@
                             <strong class="text-danger">{{ form.last_name.errors }}</strong>
                         </div>
                     </div>
-                    <input type="text" name="username" id="id_username" class="form-control my-3" placeholder="Lastname"
+                    <input type="text" name="username" id="id_username" class="form-control my-3" placeholder="Username"
                         required />
                     <strong class="text-danger">{{ form.username.errors }}</strong>
 
