Erro in navbar fixed

--- a/blogapp/templates/includes/navbar.html
+++ b/blogapp/templates/includes/navbar.html
@@ -56,7 +56,7 @@
             <div class="col d-flex align-items-center justify-content-end">
 
                 <!-- group -->
-                <div class="mx-4 nav__btn suggestion_contaner">
+                <div class="mx-lg-4 nav__btn suggestion_contaner">
                     <button type="button" class="btn px-4" data-bs-toggle="modal" data-bs-target="#suggestion">
                         <i type="button" class="position-relative fas fa-users text-muted fs-4">
 
@@ -121,7 +121,7 @@
 
                 <!-- group -->
                 <div class=" nav__btn languages_contaner">
-                    <button type="button" class="btn px-4" data-bs-toggle="modal" data-bs-target="#languages">
+                    <button type="button" class="btn px-lg-4" data-bs-toggle="modal" data-bs-target="#languages">
                         <i type="button" class="position-relative fas fa-filter text-muted fs-4">
 
                         </i>
