--- a/blogapp/templates/blog_edit.html
+++ b/blogapp/templates/blog_edit.html
@@ -9,7 +9,7 @@
         <h4 class="text-center text-muted">Edit Blog</h4>
         {% csrf_token %}
         {{form}}
-        <button class="btn btn-primary mt-3" type="submit">Save</button>
+        <button class="btn btn-primary my-3 w-100" type="submit">Save</button>
     </form>
 </div>
 {% endblock %}
