--- a/blogapp/templates/includes/navbar.html
+++ b/blogapp/templates/includes/navbar.html
@@ -327,11 +327,11 @@
                         style="width: 38px; height: 38px; object-fit: cover" />
                     <p class="m-0">{{request.user}}</p>
                 </div>
-                <div class="rounded-circle p-1 bg-gray d-flex align-items-center justify-content-center mx-2"
+                <div class="rounded-circle p-lg-1 bg-gray d-flex align-items-center justify-content-center ms-4 ms-lg-0 mx-lg-2"
                     style="width: 38px; height: 38px" type="button" id="secondMenu" data-bs-toggle="dropdown"
                     aria-expanded="false" data-bs-auto-close="outside">
                     <i class="fas fa-caret-down d-none d-lg-flex"></i>
-                    <img src="{{request.user.profile_pic.url}}" class="rounded-circle me-2 d-lg-none" alt="avatar"
+                    <img src="{{request.user.profile_pic.url}}" class="rounded-circle d-lg-none" alt="avatar"
                         style="width: 38px; height: 38px; object-fit: cover" />
                 </div>
                 <ul class="dropdown-menu border-0 shadow p-3" aria-labelledby="secondMenu" style="width: 23em">
